# qalam

./: .gitignore  README.md  pyproject.toml  sample.env
qalam/: config.py  file_handler.py  llm.py  main.py  pinecone.py  rag.py  static-analyser.py  static_analyser.py  utils.py
