[tool.poetry]
name = "qalam"
version = "0.1.0"
description = ""
authors = ["Suleman Mahmood <sulemanmahmood99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tree-sitter = "^0.24.0"
tree-sitter-python = "^0.23.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
